WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308204
[GTK][WPE] ASSERTION FAILED: !cookie.httpOnly
https://bugs.webkit.org/show_bug.cgi?id=308204
Summary
[GTK][WPE] ASSERTION FAILED: !cookie.httpOnly
Fujii Hironori
Reported
2026-02-18 23:00:50 PST
[GTK] ASSERTION FAILED: !cookie.httpOnly 1. ./Tools/Scripts/run-minibrowser --gtk --debug ~/wb 2. Go to
https://kakaku.com/
3. ASSERTION FAILED ASSERTION FAILED: !cookie.httpOnly ../../../Source/WebKit/WebProcess/WebPage/WebCookieCache.cpp(57) : String WebKit::cookiesToString(const Vector<WebCore::Cookie> &) 1 0x7fe0584f26ec WebKit::cookiesToString(WTF::Vector<WebCore::Cookie, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&) 2 0x7fe0584f1d1f WebKit::WebCookieCache::cookiesForDOM(WTF::URL const&, WebCore::SameSiteInfo const&, WTF::URL const&, WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long>, unsigned long>, WTF::ObjectIdentifierGeneric<WebCore::PageIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long>, unsigned long>, WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long>, unsigned long>, WebCore::IncludeSecureCookies) 3 0x7fe0584f3b0f WebKit::WebCookieJar::cookies(WebCore::Document&, WTF::URL const&) const 4 0x7fe05d41552e WebCore::Document::cookie() 5 0x7fe05963ae43 WebCore::jsDocument_cookieGetter(JSC::JSGlobalObject&, WebCore::JSDocument&) 6 0x7fe0595afa20 long WebCore::IDLAttribute<WebCore::JSDocument>::get<&WebCore::jsDocument_cookieGetter, (WebCore::CastedThisErrorBehavior)3>(JSC::JSGlobalObject&, long, JSC::PropertyName) 7 0x7fe0595af8bd WebCore::jsDocument_cookie(JSC::JSGlobalObject*, long, JSC::PropertyName) 8 0x7fe0495de19d WTF::FunctionPtr<(WTF::PtrTag)57072, long (JSC::JSGlobalObject*, long, JSC::PropertyName), (WTF::FunctionAttributes)1>::operator()(JSC::JSGlobalObject*, long, JSC::PropertyName) const 9 0x7fe0499f9ea9 JSC::PropertySlot::customGetter(JSC::VM&, JSC::PropertyName) const 10 0x7fe0477329b6 JSC::PropertySlot::getValue(JSC::JSGlobalObject*, JSC::PropertyName) const 11 0x7fe04773bd6c JSC::JSValue::get(JSC::JSGlobalObject*, JSC::PropertyName, JSC::PropertySlot&) const 12 0x7fe04906f1f4 JSC::LLInt::performLLIntGetByID(JSC::BytecodeIndex, JSC::CodeBlock*, JSC::JSGlobalObject*, JSC::JSValue, JSC::Identifier const&, JSC::GetByIdModeMetadata&) 13 0x7fe04906efaf llint_slow_path_get_by_id 14 0x7fe0476bb6c2 llint_op_get_by_id
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2026-02-19 20:25:09 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59055
EWS
Comment 2
2026-02-19 22:33:47 PST
Committed
307889@main
(8cb5592cf41f): <
https://commits.webkit.org/307889@main
> Reviewed commits have been landed. Closing PR #59055 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug