[Soup] NetworkStorageSession::domCookiesForHost shoudn't return httpOnly cookies https://bugs.webkit.org/show_bug.cgi?id=308204

Reviewed by Carlos Garcia Campos.

GTK and WPE ports were observing an assertion failure in WebCookieCache.cpp
while browsing some web sites.

> ASSERTION FAILED: !cookie.httpOnly
> ../../../Source/WebKit/WebProcess/WebPage/WebCookieCache.cpp(57) : String WebKit::cookiesToString(const Vector<WebCore::Cookie> &)

httpOnly cookies shouldn't be included in DOM cookies. Changed
NetworkStorageSession::domCookiesForHost not to include httpOnly cookies.

After this change, http/tests/cookies/js-get-and-set-http-only-cookie.html
started to fail. However, it's the same result as Mac port. Copied
platform/mac/http/tests/cookies/js-get-and-set-http-only-cookie-expected.txt to
glib.

Test: http/tests/cookies/set-http-only-cookie.html

* LayoutTests/http/tests/cookies/set-http-only-cookie-expected.txt: Added.
* LayoutTests/http/tests/cookies/set-http-only-cookie.html: Added.
* LayoutTests/platform/glib/http/tests/cookies/js-get-and-set-http-only-cookie-expected.txt: Added.
* Source/WebCore/platform/network/soup/NetworkStorageSessionSoup.cpp:
(WebCore::NetworkStorageSession::domCookiesForHost):

Canonical link: https://commits.webkit.org/307889@main